--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
   <body>
-    <div id="js-root"></div>
+    <div class="brn-element-container js-container" draggable="true"></div>
   </body>
 </html>
